--- a/OpenGL_Summative_1/OpenGL_Summative_1/OpenGL_Summative_1.vcxproj
+++ b/OpenGL_Summative_1/OpenGL_Summative_1/OpenGL_Summative_1.vcxproj
@@ -25,9 +25,11 @@
     <ClInclude Include="Engine\AssetMgr.h" />
     <ClInclude Include="Engine\Camera.h" />
     <ClInclude Include="Engine\Component.h" />
+    <ClInclude Include="Engine\CubeMesh.h" />
     <ClInclude Include="Engine\Debug.h" />
     <ClInclude Include="Engine\GameObject.h" />
     <ClInclude Include="Engine\Input.h" />
+    <ClInclude Include="Engine\Mesh.h" />
     <ClInclude Include="Engine\MeshComponent.h" />
     <ClInclude Include="Engine\Scene.h" />
     <ClInclude Include="Engine\SceneMgr.h" />
@@ -47,6 +49,7 @@
     <ClCompile Include="Engine\AssetMgr.cpp" />
     <ClCompile Include="Engine\Camera.cpp" />
     <ClCompile Include="Engine\Component.cpp" />
+    <ClCompile Include="Engine\CubeMesh.cpp" />
     <ClCompile Include="Engine\Debug.cpp" />
     <ClCompile Include="Engine\GameObject.cpp" />
     <ClCompile Include="Engine\Input.cpp" />
@@ -71,6 +74,8 @@
     <None Include="Engine\Shaders\Sprite.vs" />
     <None Include="Engine\Shaders\Text.fs" />
     <None Include="Engine\Shaders\Text.vs" />
+    <None Include="Engine\Shaders\Unlit.fs" />
+    <None Include="Engine\Shaders\Unlit.vs" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
